# swap-optimizer

./: .env.example  Cargo.toml  README.md
src/: arb_pool.rs  lib.rs  pool.rs
src/abi/: iuniswap_v2_pool.json  mod.rs  uniswap_v3_weth_usdt_lp_0_05.json
src/batch_requests/uniswap_v2/: mod.rs
src/batch_requests/uniswap_v3/: mod.rs
src/bindings/: dai.rs  mod.rs  uniswap_universal_router.rs  uniswap_v2_factory.rs  uniswap_v2_router_1.rs  uniswap_v2_router_2.rs  uniswap_v3_factory.rs  uniswap_v3_quoter.rs  uniswap_v3_quoter_v2.rs  uniswap_v3_router_1.rs  uniswap_v3_router_2.rs  uniswap_v3_weth_dai_lp.rs  usdc.rs  usdt.rs  weth.rs
src/v2/: swap.rs
src/v3/: errors.rs  mod.rs  swap.rs
